# pypestutils

./: .gitignore  BUILD.md  CHANGELOG.md  MANIFEST.in  README.md  do_the_thing.py  environment.yml  meson.build  meson.options  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  tests.yml
autotest/: basic_tests.py
autotest/freyberg_structured/: freyberg6.nam  freyberg6.obs  freyberg6.rch_recharge_1.txt  freyberg6.rch_recharge_10.txt  freyberg6.rch_recharge_11.txt  freyberg6.rch_recharge_12.txt  freyberg6.rch_recharge_13.txt  freyberg6.rch_recharge_14.txt  freyberg6.rch_recharge_15.txt  freyberg6.rch_recharge_16.txt  freyberg6.rch_recharge_17.txt  freyberg6.rch_recharge_18.txt  freyberg6.rch_recharge_19.txt  freyberg6.rch_recharge_2.txt  freyberg6.rch_recharge_20.txt  freyberg6.rch_recharge_21.txt  freyberg6.rch_recharge_22.txt  freyberg6.rch_recharge_23.txt  freyberg6.rch_recharge_24.txt  freyberg6.rch_recharge_25.txt  freyberg6.rch_recharge_3.txt  freyberg6.rch_recharge_4.txt  freyberg6.rch_recharge_5.txt  freyberg6.rch_recharge_6.txt  freyberg6.rch_recharge_7.txt  freyberg6.rch_recharge_8.txt  freyberg6.rch_recharge_9.txt  freyberg6.sto_sy_layer3.txt  freyberg6.tdis  freyberg6.wel_stress_period_data_1.txt  freyberg6.wel_stress_period_data_10.txt  freyberg6.wel_stress_period_data_11.txt  freyberg6.wel_stress_period_data_12.txt  freyberg6.wel_stress_period_data_13.txt  freyberg6.wel_stress_period_data_14.txt  freyberg6.wel_stress_period_data_15.txt  freyberg6.wel_stress_period_data_16.txt  freyberg6.wel_stress_period_data_17.txt  freyberg6.wel_stress_period_data_18.txt  freyberg6.wel_stress_period_data_19.txt  (+16 more)
autotest/freyberg_unstructured/: freyberg6.chd  freyberg6.disv  freyberg6.ic  freyberg6.nam  freyberg6.npf  freyberg6.oc  freyberg6.rcha  freyberg6.sfr  freyberg6.sfr.obs  freyberg6.wel  mfsim.nam
autotest/output_driver_test/: driver1c.out  driver1d.in  driver1f.in  driver1h.in  driver5d.in  lockyer.spc  rchflow.dat.std  temp.smp  vdl_interp.bln  vdl_wells.csv  wells.crd
ctypes_invest/: do_the_thing.py  fib1.f90  fibby.c  fibby_int.c
doc/pestutilslib/: fortran_library_documentation.md  new_function_documentation.docx
doc/pypestutils/: enum.html
docs/: ctypes_declarations.html  data.html  finder.html  helpers.html  index.html  logger.html  pestutilslib.html  version.html
docs/pestutilslib/: docx_to_md.py  fortran_library_documentation.md
etc/: environment.yml  linux-mingw-w64-64bit.txt  prep_src_dir.py
examples/: clear_output_all.py  exploring_helpers.ipynb  exploring_lowlevel_pypestutils_functions.ipynb  exploring_pypestutils_helpers.ipynb  exploring_w_structured_freyberg.ipynb  ppu_helpers.py  pypestutils_pstfrom_quadtree_mf6.ipynb  pypestutils_pstfrom_structured_mf6.ipynb  run_notebooks.py  swap.py
examples/freyberg_aux_files/: gwlevel_obs.csv  pp_info.csv
examples/freyberg_daily/: freyberg6.obs
examples/freyberg_monthly/: freyberg6.dis  freyberg6.dis.grb  freyberg6.dis_botm_layer1.txt  freyberg6.dis_botm_layer2.txt  freyberg6.dis_botm_layer3.txt  freyberg6.dis_delc.txt  freyberg6.dis_delr.txt  freyberg6.dis_idomain_layer2.txt  freyberg6.dis_top.txt  freyberg6.ghb  freyberg6.ghb_stress_period_data_1.txt  freyberg6.ic  freyberg6.ic_strt_layer1.txt  freyberg6.ic_strt_layer2.txt  freyberg6.ic_strt_layer3.txt  freyberg6.ims  freyberg6.lst  freyberg6.nam  freyberg6.npf  freyberg6.npf_icelltype_layer1.txt  freyberg6.npf_icelltype_layer3.txt  freyberg6.npf_k33_layer1.txt  freyberg6.npf_k33_layer2.txt  freyberg6.npf_k33_layer3.txt  freyberg6.npf_k_layer1.txt  freyberg6.npf_k_layer2.txt  freyberg6.obs  (+71 more)
org_from_john/: deftypes.f90  driver4.f90  driver5.f90  driversubs.f90  funcproc1.f90  model_interface.lib  model_interface.mak  newfunc.f90  utl.f90
org_from_john_2023-04-19/: clean.bat  deftypes.f90  dimvar.f90  driver1.f90  driver2.f90  driver3.f90  driver4.f90  driver5.f90  drivers.mak  driversubs.f90  funcproc1.f90  function_documentation.docx  model_interface.mak  newfunc.f90  utl.f90  utl_high.f90
org_from_john_2023-07-04/: driver5.f90  drivers.mak  driversubs.f90  funcproc1.f90  model_interface.mak  utl.f90  utl_high.f90
org_from_john_2023-08-07/: dimvar.f90  driver1.f90  driver10.f90  driver12.f90  driver14.f90  driver2.f90  driver4.f90  driver5.f90  driver6.f90  driver7.f90  driver9.f90  drivers.mak  funcproc1.f90  funcproc2.f90  function_interfaces.f90  lapack1.F  new_function_documentation.docx  newfunc.f90  utl_high.f90
org_from_john_2023-09-21/: deftypes.f90  driver17.f90  driver6.f90  driver9.f90  funcproc1.f90  model_interface.lib  sgsim_code.f90
org_from_john_21sept2023/: compile_all.bat  driver12.f90  driver15.f90  driver16.f90  driver4.f90  driver7.f90  drivers.mak  driversubs.f90  funcproc2.f90  function_interfaces.f90  gslib_modules.f90  lapack1.F  model_interface.mak  new_function_documentation.docx  test.f90  utl.f90  utl_high.f90
org_from_john_4jul2023/: deftypes.f90  dimvar.f90  driver3.f90  driversubs.f90  funcproc1.f90  function_interfaces.f90  utl.f90
org_from_john_7aug2023/: compile_all.bat  dimvar_c.f90  driver10.f90  driver11.f90  driver13.f90  driver15.f90  driver8.f90  drivers.mak  driversubs.f90  funcproc1.f90  funcproc2.f90  function_interfaces.f90  gslib_modules.f90  model_interface.lib  model_interface.mak  sgsim_code.f90  utl.f90
pestutils/: deftypes.f90  dimvar_c.f90  driver11.f90  driver13.f90  driver2.f90  driver8.f90  funcproc1.f90  funcproc2.f90  function_interfaces.f90  meson.build  pestutils.def
pypestutils/: __init__.py  core.py  ctypes_declarations.py  data.py  enum.py  finder.py  helpers.py  logger.py  pestutilslib.py  utils.py  version.py
scripts/: build_lib.bat  build_lib.sh  cross_build_lib.sh  prep_src_dir.py  repair_wheel.py
src/: dimvar.f90  dimvar_c.f90  driver3.f90  funcproc1.f90  funcproc2.f90  function_interfaces.f90  meson.build  newfunc.f90  sgsim_code.f90  utl.f90
tests/: common.py  conftest.py  test_core.py  test_crash.py  test_ctypes_declarations.py  test_data.py  test_drivers.py  test_enum.py  test_helpers.py  test_notebooks.py  test_pestutilslib.py
(+334 files in other folders)
